This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Refleaks in setint() of mmapmodule.c
Type: behavior Stage: resolved
Components: Extension Modules Versions: Python 3.9, Python 3.8, Python 3.7, Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: miss-islington, shihai1991, xiang.zhang
Priority: normal Keywords: patch

Created on 2019-09-14 06:17 by shihai1991, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 16136 merged shihai1991, 2019-09-14 06:21
PR 16174 merged miss-islington, 2019-09-16 06:06
PR 16175 merged miss-islington, 2019-09-16 06:06
PR 16176 merged xiang.zhang, 2019-09-16 06:33
Messages (4)
msg352412 - (view) Author: Hai Shi (shihai1991) * (Python triager) Date: 2019-09-14 06:17
As the title said, in `setint` function, the refcount of `o` should decreased all the time.
msg352511 - (view) Author: miss-islington (miss-islington) Date: 2019-09-16 06:27
New changeset 322309efe658122cac340adf4995ce40fa0c2e74 by Miss Islington (bot) in branch '3.8':
[3.8] bpo-38168: Fix a possbile refleak in setint() of mmapmodule.c (GH-16136) (GH-16174)
https://github.com/python/cpython/commit/322309efe658122cac340adf4995ce40fa0c2e74
msg352512 - (view) Author: miss-islington (miss-islington) Date: 2019-09-16 06:27
New changeset e857fe624d985616f3e1a6e095a5db732e6b3efe by Miss Islington (bot) in branch '3.7':
[3.7] bpo-38168: Fix a possbile refleak in setint() of mmapmodule.c (GH-16136) (GH-16175)
https://github.com/python/cpython/commit/e857fe624d985616f3e1a6e095a5db732e6b3efe
msg352519 - (view) Author: Xiang Zhang (xiang.zhang) * (Python committer) Date: 2019-09-16 07:07
New changeset 68d8c122972d7a49627b983af4ccbfad9f5ade17 by Xiang Zhang in branch '2.7':
[2.7] bpo-38168: Fix a possbile refleak in setint() of mmapmodule.c (GH-16136) (GH-16176)
https://github.com/python/cpython/commit/68d8c122972d7a49627b983af4ccbfad9f5ade17
History
Date User Action Args
2022-04-11 14:59:20adminsetgithub: 82349
2019-09-16 07:09:19xiang.zhangsetstatus: open -> closed
stage: patch review -> resolved
resolution: fixed
components: + Extension Modules, - Interpreter Core
versions: + Python 2.7, Python 3.7, Python 3.8, Python 3.9
2019-09-16 07:07:35xiang.zhangsetnosy: + xiang.zhang
messages: + msg352519
2019-09-16 06:33:23xiang.zhangsetpull_requests: + pull_request15786
2019-09-16 06:27:41miss-islingtonsetmessages: + msg352512
2019-09-16 06:27:05miss-islingtonsetnosy: + miss-islington
messages: + msg352511
2019-09-16 06:06:29miss-islingtonsetpull_requests: + pull_request15785
2019-09-16 06:06:00miss-islingtonsetpull_requests: + pull_request15784
2019-09-14 06:21:12shihai1991setkeywords: + patch
stage: patch review
pull_requests: + pull_request15746
2019-09-14 06:18:47shihai1991settitle: Reflaks in setint() of mmapmodule.c -> Refleaks in setint() of mmapmodule.c
2019-09-14 06:17:23shihai1991create