[2.7] bpo-38168: Fix a possbile refleak in setint() of mmapmodule.c (GH-16136)

(cherry picked from commit 56a4514)

Co-authored-by: Hai Shi shihai1992@gmail.com

https://bugs.python.org/issue38168